# Raytracer

./: CMakeLists.txt
Apps/Cannon/: Projectile.cpp  Projectile.h
Google_tests/: CMakeLists.txt  CameraTest.cpp  CanvasTest.cpp  CubeTest.cpp  GenTest.cpp  IntersectionTest.cpp  LightTest.cpp  MaterialTest.cpp  MatrixTest.cpp  PatternTest.cpp  PlaneTest.cpp  RayTest.cpp  SphereTest.cpp  TransformTest.cpp  TupleTest.cpp  WorldTest.cpp
Google_tests/lib/: BUILD.bazel  IntersectionTest.cpp  README.md  platformio.ini
Google_tests/lib/ci/: env-linux.sh  get-nprocessors.sh  install-linux.sh  travis.sh
Google_tests/lib/googlemock/docs/: cheat_sheet.md  cook_book.md  for_dummies.md  gmock_faq.md
Google_tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-matchers.h  gmock-spec-builders.h
Google_tests/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h  gmock-pp.h
Google_tests/lib/googlemock/scripts/: gmock-config.in
Google_tests/lib/googlemock/scripts/generator/: LICENSE
Google_tests/lib/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc
Google_tests/lib/googletest/: README.md
Google_tests/lib/googletest/cmake/: internal_utils.cmake
Google_tests/lib/googletest/docs/: advanced.md  faq.md  pkgconfig.md  primer.md  pump_manual.md  samples.md
Google_tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest.h
Google_tests/lib/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h  gtest-type-util.h.pump
Google_tests/lib/googletest/scripts/: gtest-config.in
Google_tests/lib/googletest/scripts/test/: Makefile
Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
Google_tests/lib/googletest/test/: googletest-output-test-golden-lin.txt
RTC_lib/: CMakeLists.txt  Canvas.cpp  Canvas.h  Tuple.cpp  Tuple.h  camera.cpp  camera.h  canvas.cpp  canvas.h  common.h  constants.h  intersection.cpp  intersection.h  light.cpp  light.h  material.cpp  material.h  maths.h  matrix.cpp  matrix.h  pattern.cpp  pattern.h  patterns.cpp  patterns.h  plane.cpp  plane.h  ray.cpp  ray.h  shape.cpp  shape.h  sphere.cpp  sphere.h  transform.cpp  transform.h  tuple.cpp  tuple.h  world.cpp  world.h
RTC_lib/include/: camera.h  canvas.h  common.h  constants.h  cube.h  intersection.h  light.h  material.h  matrix.h  pattern.h  plane.h  ray.h  shape.h  sphere.h  transform.h  tuple.h  utils.h  world.h
RTC_lib/src/: camera.cpp  canvas.cpp  cube.cpp  intersection.cpp  light.cpp  material.cpp  matrix.cpp  pattern.cpp  plane.cpp  ray.cpp  shape.cpp  sphere.cpp  transform.cpp  tuple.cpp  world.cpp
apps/: CMakeLists.txt
apps/cannon/: cannon.cpp  cannonPPM.cpp  environment.cpp  environment.h  projectile.cpp  projectile.h
apps/clock/: clock.cpp
apps/plane/: plane.cpp
apps/silhouette/: silhouette.cpp  silhouettePhong.cpp
apps/trisphere/: trisphere.cpp
